WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230388
radial-gradient does not accept calc values that combine length and percent
https://bugs.webkit.org/show_bug.cgi?id=230388
Summary
radial-gradient does not accept calc values that combine length and percent
Tuomas Karkkainen
Reported
2021-09-16 23:30:31 PDT
Created
attachment 438446
[details]
sample html file demonstrating the issue in radial-gradient calc() works when adding lengths together, or percentages together: radial-gradient(50px calc(50px + 1px), #f0f, #fff) radial-gradient(50px calc(50% + 1%), #f0f, #fff) combining length and percentage does not work: radial-gradient(50px calc(50% + 1px), #f0f, #fff)
Attachments
sample html file demonstrating the issue
(517 bytes, text/html)
2021-09-16 23:30 PDT
,
Tuomas Karkkainen
no flags
Details
Patch
(4.00 KB, patch)
2021-10-04 12:48 PDT
,
Nikos Mouchtaris
no flags
Details
Formatted Diff
Diff
Patch
(5.20 KB, patch)
2021-10-04 19:11 PDT
,
Nikos Mouchtaris
simon.fraser
: review+
Details
Formatted Diff
Diff
Patch
(5.19 KB, patch)
2021-10-04 21:43 PDT
,
Nikos Mouchtaris
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-09-23 23:31:20 PDT
<
rdar://problem/83482168
>
Nikos Mouchtaris
Comment 2
2021-10-04 12:48:06 PDT
Created
attachment 440090
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-10-04 14:00:13 PDT
Comment on
attachment 440090
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=440090&action=review
> LayoutTests/css3/calc/css3-radial-gradients.html:52 > + background-image: radial-gradient(50px calc(50% + 10px), #f0f, #fff);
You should probably add another test with the simple radial-gradient(50px, 25%) case that doesn't' involve calc.
Nikos Mouchtaris
Comment 4
2021-10-04 19:11:47 PDT
Created
attachment 440144
[details]
Patch
Nikos Mouchtaris
Comment 5
2021-10-04 21:43:17 PDT
Created
attachment 440156
[details]
Patch
EWS
Comment 6
2021-10-05 11:19:24 PDT
Committed
r283561
(
242526@main
): <
https://commits.webkit.org/242526@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440156
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug