radial-gradient does not accept calc values that combine length and percent https://bugs.webkit.org/show_bug.cgi?id=230388

Patch by Nikos Mouchtaris <nmouchtaris@apple.com> on 2021-10-05
Reviewed by Simon Fraser.

Source/WebCore:

Removed outdated check that disallowed combined percentage and length expressions.
Added code to calculate radius for combined percentage and length expressions.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeRadialGradient):

LayoutTests:

* css3/calc/css3-radial-gradients-expected.html:
* css3/calc/css3-radial-gradients.html:

Canonical link: https://commits.webkit.org/242526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283561 268f45cc-cd09-0410-ab3c-d52691b4dbfc