Source/WebCore/css/CSSGradientValue.cpp
@@ -977,6 +977,10 @@ float CSSRadialGradientValue::resolveRadius(CSSPrimitiveValue& radius, const CSS
         result = radius.floatValue() * conversionData.zoom();
     else if (widthOrHeight && radius.isPercentage())
         result = *widthOrHeight * radius.floatValue() / 100;
+    else if (widthOrHeight && radius.isCalculatedPercentageWithLength()) {
+        auto expression = radius.cssCalcValue()->createCalculationValue(conversionData);
+        result = expression->evaluate(*widthOrHeight);
+    }
     else
         result = radius.computeLength<float>(conversionData);
     return result;
